--- a/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
+++ b/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
@@ -54,6 +54,8 @@ library
     , bytestring
     , cookie
     , cryptonite
+    , lens
+    , lens-aeson
     , optparse-applicative
     , pem
     , text
@@ -69,3 +71,15 @@ executable aws-cloudfront-signed-cookies
   build-depends:
       aws-cloudfront-signed-cookies
     , base >=4.7 && <5
+
+test-suite hedgehog
+  default-language: Haskell2010
+  hs-source-dirs: test
+  type: exitcode-stdio-1.0
+  main-is: hedgehog.hs
+  ghc-options: -threaded
+  build-depends:
+      aws-cloudfront-signed-cookies
+    , base >=4.7 && <5
+    , hedgehog
+    , neat-interpolation
