--- a/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
+++ b/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
@@ -19,7 +19,7 @@ license-file: license.txt
 build-type: Simple
 cabal-version: >= 1.10
 
-tested-with: GHC==8.6.3, GHC==8.4.4, GHC==8.2.2
+tested-with: GHC==8.8.1, GHC==8.6.3, GHC==8.4.4, GHC==8.2.2
 
 extra-source-files:
     readme.md
