--- a/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
+++ b/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
@@ -66,6 +66,9 @@ library
     , unordered-containers
     , vector
 
+  -- the introduction of Data.Time.Clock.nominalDay
+  build-depends: time >= 1.8
+
 executable aws-cloudfront-signed-cookies
   default-language: Haskell2010
   hs-source-dirs: executables
