--- a/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
+++ b/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
@@ -1,5 +1,5 @@
 name: aws-cloudfront-signed-cookies
-version: 0.2.0.2
+version: 0.2.0.4
 
 synopsis: Generate signed cookies for AWS CloudFront
 category: Network, AWS, Cloud
@@ -52,7 +52,7 @@ library
     , aeson-pretty
     , asn1-encoding
     , asn1-types
-    , base >=4.7 && <5
+    , base
     , base64-bytestring
     , bytestring
     , cookie
@@ -69,6 +69,12 @@ library
   -- the introduction of Data.Time.Clock.nominalDay
   build-depends: time >= 1.8
 
+  -- corresponds to ghc 8.0, which introduced TypeApplications
+  build-depends: base >= 4.9
+
+  -- untested
+  build-depends: base < 4.14
+
 executable aws-cloudfront-signed-cookies
   default-language: Haskell2010
   hs-source-dirs: executables
@@ -76,7 +82,7 @@ executable aws-cloudfront-signed-cookies
 
   build-depends:
       aws-cloudfront-signed-cookies
-    , base >=4.7 && <5
+    , base >= 4.9 && < 4.14
 
 test-suite hedgehog
   default-language: Haskell2010
@@ -86,6 +92,6 @@ test-suite hedgehog
   ghc-options: -threaded
   build-depends:
       aws-cloudfront-signed-cookies
-    , base >=4.7 && <5
+    , base >= 4.9 && < 4.14
     , hedgehog
     , neat-interpolation
