--- a/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
+++ b/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
@@ -1,3 +1,5 @@
+cabal-version: 2.2
+
 name: aws-cloudfront-signed-cookies
 version: 0.2.0.8
 
@@ -17,7 +19,6 @@ license: MIT
 license-file: license.txt
 
 build-type: Simple
-cabal-version: >= 1.10
 
 tested-with: GHC == 8.10.1, GHC==8.8.1, GHC==8.6.3, GHC==8.4.4, GHC==8.2.2
 
@@ -49,31 +50,60 @@ library
 
   build-depends:
       aeson
+           ^>= 1.4
+        || ^>= 1.5
     , aeson-pretty
+           ^>= 0.8
     , asn1-encoding
+           ^>= 0.9.5
     , asn1-types
+           ^>= 0.3.2
     , base
+           ^>= 4.10
+        || ^>= 4.11
+        || ^>= 4.12
+        || ^>= 4.13
+        || ^>= 4.14
     , base64-bytestring
+           ^>= 1.0.0.2
+        || ^>= 1.1
+        || ^>= 1.2
     , bytestring
+           ^>= 0.10.8.1
+        || ^>= 0.11
     , cookie
+           ^>= 0.4.3
     , cryptonite
+           ^>= 0.25
+        || ^>= 0.26
+        || ^>= 0.27
+        || ^>= 0.28
+        || ^>= 0.29
     , lens
+           ^>= 4.15.2
+        || ^>= 4.16
+        || ^>= 4.17
+        || ^>= 4.18
+        || ^>= 4.19
+        || ^>= 5
     , lens-aeson
+           ^>= 1.0.2
+        || ^>= 1.1
     , optparse-applicative
+           ^>= 0.14.1.0
+        || ^>= 0.15
+        || ^>= 0.16
     , pem
+           ^>= 0.2.3
     , text
+           ^>= 1.2.3
     , time
+           ^>= 1.8
+        || ^>= 1.9
     , unordered-containers
+           ^>= 0.2.10
     , vector
-
-  -- the introduction of Data.Time.Clock.nominalDay
-  build-depends: time >= 1.8
-
-  -- corresponds to ghc 8.0, which introduced TypeApplications
-  build-depends: base >= 4.9
-
-  -- untested
-  build-depends: base < 4.15
+           ^>= 0.12.0.1
 
 executable aws-cloudfront-signed-cookies
   default-language: Haskell2010
@@ -82,7 +112,12 @@ executable aws-cloudfront-signed-cookies
 
   build-depends:
       aws-cloudfront-signed-cookies
-    , base >= 4.9 && < 4.15
+    , base
+           ^>= 4.10
+        || ^>= 4.11
+        || ^>= 4.12
+        || ^>= 4.13
+        || ^>= 4.14
 
 test-suite hedgehog
   default-language: Haskell2010
@@ -92,6 +127,16 @@ test-suite hedgehog
   ghc-options: -threaded
   build-depends:
       aws-cloudfront-signed-cookies
-    , base >= 4.9 && < 4.15
+    , base
+           ^>= 4.10
+        || ^>= 4.11
+        || ^>= 4.12
+        || ^>= 4.13
+        || ^>= 4.14
     , hedgehog
+           ^>= 0.6
+        || ^>= 1.0
     , neat-interpolation
+           ^>= 0.3.2
+        || ^>= 0.4
+        || ^>= 0.5
