--- a/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
+++ b/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
@@ -130,7 +130,7 @@ test-suite hedgehog
   default-language: Haskell2010
   hs-source-dirs: test
   type: exitcode-stdio-1.0
-  main-is: hedgehog.hs
+  main-is: Main.hs
   ghc-options: -threaded
   build-depends:
       aws-cloudfront-signed-cookies
