--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,25 +1,16 @@
-on: [push, pull_request]
+on: [push]
 
-name: CI for 'aws-cloudfront-signed-cookies'
+name: Test
 
 jobs:
-
   build:
-    name: Test the package
+    name: Test
     runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
-        os:
-          - ubuntu-latest
-          - macos-latest
-        ghc:
-          - '8.2.2'
-          - '8.4.4'
-          - '8.6.3'
-          - '8.8.1'
-          - '8.10.1'
-          - '9.0.1'
+        ghc: ['8.2', '8.4', '8.6', '8.8', '8.10', '9.0']
+        os: ['ubuntu-latest', 'macos-latest']
 
     steps:
       - uses: actions/checkout@v2
@@ -30,9 +21,8 @@ jobs:
           path: |
             ~/.cabal/packages
             ~/.cabal/store
-          key: ${{ runner.os }}-${{ matrix.ghc }}-${{ matrix.variant }}-${{ hashFiles('**/*.cabal', '.github/workflows/test.hs') }}
+          key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('**/*.cabal', 'configurations/ghc-${{ matrix.ghc }}.project') }}
           restore-keys: |
-              ${{ runner.os }}-${{ matrix.ghc }}-${{ matrix.variant }}-
               ${{ runner.os }}-${{ matrix.ghc }}-
               ${{ runner.os }}-
 
@@ -40,7 +30,8 @@ jobs:
         with:
           ghc-version: ${{ matrix.ghc }}
 
+      - name: Build
+        run: cabal build all --project-file ./configurations/ghc-${{ matrix.ghc }}.project
+
       - name: Test
-        run: runhaskell --ghc-arg='-package process' ./.github/workflows/test.hs
-        env:
-          ghc: ${{ matrix.ghc }}
+        run: cabal test all --enable-tests --project-file ./configurations/ghc-${{ matrix.ghc }}.project
