--- a/configurations/ghc-9.0.project
+++ b/configurations/ghc-9.0.project
@@ -3,4 +3,5 @@ packages: aws-cloudfront-signed-cookies
 constraints:
     base == 4.15.*
   , aeson == 2.0.0.0
+  , hedgehog == 1.1.*
   , lens == 5.1
