--- a/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
+++ b/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
@@ -61,7 +61,7 @@ library
       , cryptonite ^>= 0.25 || ^>= 0.26 || ^>= 0.27 || ^>= 0.28 || ^>= 0.29
       , lens ^>= 4.15.2 || ^>= 4.16 || ^>= 4.17 || ^>= 4.18 || ^>= 4.19 || ^>= 5 || ^>= 5.1
       , lens-aeson ^>= 1.0.2 || ^>= 1.1
-      , optparse-applicative ^>= 0.14.1.0 || ^>= 0.15 || ^>= 0.16
+      , optparse-applicative ^>= 0.14.1.0 || ^>= 0.15 || ^>= 0.16 || ^>= 0.17
       , pem ^>= 0.2.3
       , text ^>= 1.2.3
       , time ^>= 1.8 || ^>= 1.9
