--- a/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
+++ b/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
@@ -30,7 +30,7 @@ common base
     default-language: Haskell2010
     ghc-options: -Wall -fno-warn-unused-imports
     build-depends:
-        base ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14 || ^>= 4.15
+        base ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14 || ^>= 4.15 || ^>= 4.16
 
 library
     import: base
@@ -58,7 +58,7 @@ library
       , base64-bytestring ^>= 1.0.0.2 || ^>= 1.1 || ^>= 1.2
       , bytestring ^>= 0.10.8.1 || ^>= 0.11
       , cookie ^>= 0.4.3
-      , cryptonite ^>= 0.25 || ^>= 0.26 || ^>= 0.27 || ^>= 0.28 || ^>= 0.29
+      , cryptonite ^>= 0.25 || ^>= 0.26 || ^>= 0.27 || ^>= 0.28 || ^>= 0.29 || ^>= 0.30
       , lens ^>= 4.15.2 || ^>= 4.16 || ^>= 4.17 || ^>= 4.18 || ^>= 4.19 || ^>= 5 || ^>= 5.1
       , lens-aeson ^>= 1.0.2 || ^>= 1.1
       , optparse-applicative ^>= 0.14.1.0 || ^>= 0.15 || ^>= 0.16 || ^>= 0.17
