remove changelog, this is all tracked in github releases now

--- a/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
+++ b/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
@@ -20,7 +20,7 @@ license-file: license.txt
 
 build-type: Simple
 
-extra-source-files: readme.md, changelog.md
+extra-source-files: readme.md
 
 source-repository head
     type: git
