--- a/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
+++ b/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
@@ -30,7 +30,7 @@ common base
     default-language: Haskell2010
     ghc-options: -Wall -fno-warn-unused-imports
     build-depends:
-        base ^>= 4.10 || ^>= 4.11 || ^>= 4.12 || ^>= 4.13 || ^>= 4.14 || ^>= 4.15 || ^>= 4.16
+        base ^>= 4.14 || ^>= 4.15 || ^>= 4.16
 
 library
     import: base
@@ -51,21 +51,21 @@ library
         Network.AWS.CloudFront.SignedCookies.Crypto.Internal
 
     build-depends:
-        aeson ^>= 1.4 || ^>= 1.5 || ^>= 2.0
-      , aeson-pretty ^>= 0.8
-      , asn1-encoding ^>= 0.9.5
-      , asn1-types ^>= 0.3.2
-      , base64-bytestring ^>= 1.0.0.2 || ^>= 1.1 || ^>= 1.2
-      , bytestring ^>= 0.10.8.1 || ^>= 0.11
-      , cookie ^>= 0.4.3
-      , cryptonite ^>= 0.25 || ^>= 0.26 || ^>= 0.27 || ^>= 0.28 || ^>= 0.29 || ^>= 0.30
-      , lens ^>= 4.15.2 || ^>= 4.16 || ^>= 4.17 || ^>= 4.18 || ^>= 4.19 || ^>= 5 || ^>= 5.1
-      , lens-aeson ^>= 1.0.2 || ^>= 1.1
-      , optparse-applicative ^>= 0.14.1.0 || ^>= 0.15 || ^>= 0.16 || ^>= 0.17
-      , pem ^>= 0.2.3
-      , text ^>= 1.2.3
-      , time ^>= 1.8 || ^>= 1.9
-      , vector ^>= 0.12.0.1
+        aeson ^>= 2.0.2
+      , aeson-pretty ^>= 0.8.9
+      , asn1-encoding ^>= 0.9.6
+      , asn1-types ^>= 0.3.4
+      , base64-bytestring ^>= 1.2.0.1
+      , bytestring ^>= 0.11.1
+      , cookie ^>= 0.4.5
+      , cryptonite ^>= 0.29 || ^>= 0.30
+      , lens ^>= 5.0.1 || ^>= 5.1
+      , lens-aeson ^>= 1.2
+      , optparse-applicative ^>= 0.16.1 || ^>= 0.17
+      , pem ^>= 0.2.4
+      , text ^>= 1.2.4.1
+      , time ^>= 1.9.3 || ^>= 1.10 || ^>= 1.11
+      , vector ^>= 0.12.3
 
 executable aws-cloudfront-signed-cookies
     import: base
@@ -82,5 +82,5 @@ test-suite hedgehog
 
     build-depends:
         aws-cloudfront-signed-cookies
-      , hedgehog ^>= 0.6 || ^>= 1.0 || ^>= 1.1
-      , neat-interpolation ^>= 0.3.2 || ^>= 0.4 || ^>= 0.5
+      , hedgehog ^>= 1.0.5 || ^>= 1.1
+      , neat-interpolation ^>= 0.5.1.2
