--- a/configurations/ghc-9.0.project
+++ b/configurations/ghc-9.0.project
@@ -2,7 +2,7 @@ packages: aws-cloudfront-signed-cookies
 
 constraints:
     base == 4.15.*
-  , aeson == 2.0.0.0
   , hedgehog == 1.1.*
   , lens == 5.1
   , optparse-applicative == 0.17.*
+  , time == 1.10.*
