--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         ghc: ['8.10', '9.0', '9.2']
-        os: ['ubuntu-latest', 'macos-latest']
+        os: ['ubuntu-latest']
 
     steps:
       - uses: actions/checkout@v2
