--- a/configurations/ghc-9.0.project
+++ b/configurations/ghc-9.0.project
@@ -4,6 +4,6 @@ constraints:
     aeson == 2.0.3.*
   , base == 4.15.*
   , hedgehog == 1.1.*
-  , lens == 5.1
+  , lens == 5.1.*
   , optparse-applicative == 0.17.*
   , time == 1.10.*
