--- a/configurations/ghc-9.2.project
+++ b/configurations/ghc-9.2.project
@@ -10,7 +10,7 @@ constraints:
   , cookie == 0.4.5
   , cryptonite == 0.30
   , hedgehog == 1.1.*
-  , lens == 5.1.1
+  , lens == 5.2.*
   , neat-interpolation == 0.5.1.*
   , optparse-applicative == 0.17.*
   , pem == 0.2.4
