--- a/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
+++ b/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
@@ -1,13 +1,15 @@
 cabal-version: 3.0
 
 name: aws-cloudfront-signed-cookies
-version: 0.2.0.11
-x-revision: 4
+version: 0.2.0.12
 
 synopsis: Generate signed cookies for AWS CloudFront
 category: Network, AWS, Cloud
 
-description: One way to [serve private content through AWS CloudFront](https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/PrivateContent.html) is to use [signed cookies](https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/private-content-signed-cookies.html). This package helps you generate signed cookies [using a custom IAM policy](https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/private-content-setting-signed-cookie-custom-policy.html) which may include a range of time for which the cookie is valid and an IP address restriction.
+description: One way to serve private content through AWS CloudFront
+     is to use signed cookies. This package helps you generate signed
+     cookies using a custom IAM policy which may include a range of
+     time for which the cookie is valid and an IP address restriction.
 
 homepage: https://github.com/typeclasses/aws-cloudfront-signed-cookies
 bug-reports: https://github.com/typeclasses/aws-cloudfront-signed-cookies/issues
@@ -19,9 +21,7 @@ copyright: 2021 Mission Valley Software LLC
 license: MIT
 license-file: license.txt
 
-build-type: Simple
-
-extra-source-files: readme.md
+extra-source-files: *.md
 
 source-repository head
     type: git
@@ -38,7 +38,7 @@ common base
         ScopedTypeVariables
         TypeApplications
     build-depends:
-        base ^>= 4.14 || ^>= 4.15 || ^>= 4.16
+        base ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17
 
 library
     import: base
@@ -59,20 +59,20 @@ library
         Network.AWS.CloudFront.SignedCookies.Crypto.Internal
 
     build-depends:
-        aeson ^>= 2.0.2 || ^>= 2.1
+        aeson ^>= 2.0.3 || ^>= 2.1
       , aeson-pretty ^>= 0.8.9
       , asn1-encoding ^>= 0.9.6
       , asn1-types ^>= 0.3.4
-      , base64-bytestring ^>= 1.2.0.1
-      , bytestring ^>= 0.11.1
+      , base64-bytestring ^>= 1.2.1
+      , bytestring ^>= 0.10.12 || ^>= 0.11
       , cookie ^>= 0.4.5
       , cryptonite ^>= 0.29 || ^>= 0.30
       , lens ^>= 5.0.1 || ^>= 5.1 || ^>= 5.2
       , lens-aeson ^>= 1.2
       , optparse-applicative ^>= 0.16.1 || ^>= 0.17
       , pem ^>= 0.2.4
-      , text ^>= 1.2.4.1
-      , time ^>= 1.9.3 || ^>= 1.10 || ^>= 1.11
+      , text ^>= 1.2.4 || ^>= 2.0
+      , time ^>= 1.9.3 || ^>= 1.10 || ^>= 1.11 || ^>= 1.12
       , vector ^>= 0.12.3 || ^>= 0.13
 
 executable aws-cloudfront-signed-cookies
@@ -94,4 +94,4 @@ test-suite hedgehog
     build-depends:
         aws-cloudfront-signed-cookies
       , hedgehog ^>= 1.0.5 || ^>= 1.1 || ^>= 1.2
-      , neat-interpolation ^>= 0.5.1.2
+      , neat-interpolation ^>= 0.5.1
