--- a/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
+++ b/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
@@ -38,7 +38,7 @@ common base
         ScopedTypeVariables
         TypeApplications
     build-depends:
-        base ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17
+      , base ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17
 
 library
     import: base
@@ -59,7 +59,7 @@ library
         Network.AWS.CloudFront.SignedCookies.Crypto.Internal
 
     build-depends:
-        aeson ^>= 2.0.3 || ^>= 2.1
+      , aeson ^>= 2.0.3 || ^>= 2.1
       , aeson-pretty ^>= 0.8.9
       , asn1-encoding ^>= 0.9.6
       , asn1-types ^>= 0.3.4
@@ -92,6 +92,6 @@ test-suite hedgehog
         TemplateHaskell
 
     build-depends:
-        aws-cloudfront-signed-cookies
+      , aws-cloudfront-signed-cookies
       , hedgehog ^>= 1.0.5 || ^>= 1.1 || ^>= 1.2
       , neat-interpolation ^>= 0.5.1
