--- a/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
+++ b/aws-cloudfront-signed-cookies/aws-cloudfront-signed-cookies.cabal
@@ -38,12 +38,11 @@ common base
         ScopedTypeVariables
         TypeApplications
     build-depends:
-      , base ^>= 4.14 || ^>= 4.15 || ^>= 4.16 || ^>= 4.17
+      , base ^>= 4.15 || ^>= 4.16 || ^>= 4.17 || ^>= 4.18
 
 library
     import: base
     hs-source-dirs: library
-
     exposed-modules:
         Network.AWS.CloudFront.SignedCookies
         Network.AWS.CloudFront.SignedCookies.CLI
@@ -53,11 +52,9 @@ library
         Network.AWS.CloudFront.SignedCookies.Encoding
         Network.AWS.CloudFront.SignedCookies.Policy
         Network.AWS.CloudFront.SignedCookies.Types
-
     other-modules:
         Network.AWS.CloudFront.SignedCookies.CLI.Internal
         Network.AWS.CloudFront.SignedCookies.Crypto.Internal
-
     build-depends:
       , aeson ^>= 2.0.3 || ^>= 2.1
       , aeson-pretty ^>= 0.8.9
@@ -69,7 +66,7 @@ library
       , cryptonite ^>= 0.29 || ^>= 0.30
       , lens ^>= 5.0.1 || ^>= 5.1 || ^>= 5.2
       , lens-aeson ^>= 1.2
-      , optparse-applicative ^>= 0.16.1 || ^>= 0.17
+      , optparse-applicative ^>= 0.16.1 || ^>= 0.17 || ^>= 0.18
       , pem ^>= 0.2.4
       , text ^>= 1.2.4 || ^>= 2.0
       , time ^>= 1.9.3 || ^>= 1.10 || ^>= 1.11 || ^>= 1.12
@@ -90,7 +87,6 @@ test-suite hedgehog
     default-extensions:
         QuasiQuotes
         TemplateHaskell
-
     build-depends:
       , aws-cloudfront-signed-cookies
       , hedgehog ^>= 1.0.5 || ^>= 1.1 || ^>= 1.2
